changed to sold

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <strong>911 Fourth Street</strong>
               <small>Colorado Springs, CO 80907</small>
             </address>
-            <small class="status"><span class="for-sale"></span>For Sale</small>
+            <small class="status"><span class="for-sale"></span>SOLD</small>
           </div>
           
         </div>
@@ -61,7 +61,7 @@
           <div class="price">
             <div class="padded-inner-container">
               <!-- <strong style="text-decoration: line-through; text-decoration-color: red; text-decoration-thickness: 2px;">$595,000</strong> <br> -->
-              <strong>$375,000</strong>
+              <strong>$385,000</strong>
               <!-- <small>Listed at Price</small> -->
             </div>
           </div>
